<resources>

    <!-- Window Welcome apphu -->
    <string name="app_name">Apphu</string>
    <string name="msg_bienvenida">BIENVENIDO APPHU</string>
    <string name="msg_controlgastos">Control de Gastos</string>
    <string name="msg_titulo_privacidad">Aviso de Privacidad</string>
    <string name="msg_titulo_acepto">Acepto la licencia por el uso del App.</string>
    <string name="msg_button_acepto">Siguente</string>

    <!-- Window Register apphu -->
    <string name="msg_title_register_head">Registro Nuevo Usuario</string>
    <string name="msg_hint_registerUser_names">Nombres</string>
    <string name="msg_hint_registerUser_password">Contraseña</string>
    <string name="msg_hint_registerUser_email">Email</string>
    <string name="msg_button_registerUser">Registrarse</string>
    <string name="msg_button_redirectLoginUser">Ya tengo una membresia</string>

    <!-- Window Login apphu -->
    <string name="msg_title_login_head">Iniciar Sesión</string>
    <string name="msg_button_loginSend">Enviar</string>
    <string name="title_activity_main_panel">Panel Principal</string>

    <!-- Main Menu-->
    <string name="action_settings">Cambio de Clave</string>
    <string name="action_personal">Datos Personales</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="my_shopping">Mis Compras</string>
    <string name="list_card">Listado de Tarjetas</string>
    <string name="add_card">Agregar Tarjeta</string>
    <string name="send_state_shopping">Envio estado de Compras</string>


    <!-- Window Configure Account -->
    <string name="msg_title_configure_account">Configurar Cuenta</string>
    <string-array name="coin">
        <item>Soles</item>
        <item>Dolares</item>
    </string-array>
    <string name="msg_title_affordability">Capacidad de Endeudamiento Mensual</string>

    <!-- Window Add Card  -->
    <string name="msg_title_add_card">Agregar Tarjeta de Crédito</string>
    <string name="msg_title_bank">Banco</string>
    <string name="msg_title_product">Producto</string>
    <string name="msg_title_line">Línea</string>
    <string name="msg_hint_line">Ingrese la Línea de Crédito</string>
    <string name="msg_title_tea">Compra TEA %</string>
    <string name="msg_dis_effective">Disp. Efec. TEA%</string>
    <string name="msg_hint_dis_effective">Ingrese la Disposición de Efectivo</string>

    <!-- Window Purchase Register-->
    <string name="msg_title_purchase_register">Comprar Ya</string>
    <string name="msg_title_select_card">Seleccione Card</string>
    <string-array name="products_array">
        <item>Tarjeta de Credito Oro Lan Pass</item>
        <item>Tarjeta de Credito Visa BCP Oro</item>
        <item>Tarjeta de Credito Visa BCP Platinum</item>
    </string-array>
    <string name="msg_title_purchase_line">Linea Actual</string>
    <string name="msg_button_cuota">Fijar Cuota</string>
    <string name="msg_button_monto">Fijar Monto</string>
</resources>
