<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.gcgi.apphu.AddCard"
    android:isScrollContainer="true"
    android:orientation="vertical">



    <LinearLayout
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/alerta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:textSize="20sp"
            android:text="@string/msg_title_add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

<TextView
    android:layout_marginTop="10dp"
    android:text="@string/msg_title_bank"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <Spinner
        android:layout_marginTop="10dp"
        android:id="@+id/spinner_bank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/msg_title_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_marginTop="10dp"
        android:id="@+id/spinner_product"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/msg_title_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:textSize="@dimen/textos"
        android:inputType="number"
        android:hint="@string/msg_hint_line"
        android:id="@+id/editxt_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/msg_title_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:textSize="@dimen/textos"
        android:inputType="number"
        android:id="@+id/editxt_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/msg_dis_effective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        
        android:textSize="@dimen/textos"
        android:inputType="number"
        android:hint="@string/msg_hint_dis_effective"
        android:id="@+id/editxt_disp_effective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_next_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguiente"/>

</LinearLayout>
