<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pe.gcgi.apphu.PurchaseRegister">
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/alerta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:text="@string/msg_title_purchase_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <TextView
        android:paddingTop="10dp"
        android:text="@string/msg_title_select_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_purchase_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/msg_title_purchase_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="10dp"
            android:text="5,000.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button_cuota"
        android:text="@string/msg_button_cuota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_monto"
        android:text="@string/msg_button_monto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
