<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pe.gcgi.apphu.Register_User">

    <TextView
        android:gravity="center"
        android:textColor="#FFF"
        android:background="@color/colorTitleHeadUser"
        android:textSize="@dimen/txt_size_title_register_user_head"
        android:padding="@dimen/txt_padding_title_register_user_head"
        android:layout_gravity="center_horizontal"
        android:text="@string/msg_title_register_head"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />


<LinearLayout
    android:background="@color/colorBackgroundUser"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <EditText
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginTop="20dp"

        android:layout_gravity="center"

        android:background="@color/colorBackgroundWhite"
        android:id="@+id/names"
        android:hint="@string/msg_hint_registerUser_names"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundWhite"
        android:id="@+id/password"
        android:hint="@string/msg_hint_registerUser_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundWhite"
        android:id="@+id/email"
        android:hint="@string/msg_hint_registerUser_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/msg_button_registerUser"
        android:id="@+id/button_register_user"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

     <TextView
         android:id="@+id/button_redirect_login"
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/msg_button_redirectLoginUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

</LinearLayout>

</LinearLayout>
