<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pe.gcgi.apphu.MainActivity">


<LinearLayout

 android:orientation="horizontal"
   android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bienvenido"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_bienvenida"
        />


    <TextView
        android:layout_marginLeft="@dimen/activity_gastos_margin_left"
        android:layout_above="@id/bienvenido"
        android:textSize="12sp"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_controlgastos"
        />

</LinearLayout>

<LinearLayout
    android:paddingTop="20dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/alerta"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:textSize="@dimen/textos"
        android:text="@string/msg_titulo_privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>

    <CheckBox
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/chk_welcome"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textos"
        android:text="@string/msg_titulo_acepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

 <Button
     android:id="@+id/button_next_welcome"
     android:textColor="@color/colorAccent"
     android:textSize="@dimen/textos"
     android:text="@string/msg_button_acepto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />



</LinearLayout>
