<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pe.gcgi.apphu.ConfigureAccount"
    android:orientation="vertical"
    >


    <LinearLayout

        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_bienvenida"
            />


        <TextView
            android:layout_marginLeft="@dimen/activity_gastos_margin_left"

            android:textSize="12sp"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_controlgastos"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/alerta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:textSize="@dimen/textos"
            android:text="@string/msg_title_configure_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <EditText
        android:id="@+id/capacity_monthly"
        android:inputType="numberDecimal"
        android:textSize="@dimen/textos"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_title_affordability"/>

    <Spinner
        android:layout_marginTop="10dp"
        android:id="@+id/coin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguente"
        android:id="@+id/button_next_configure_account"
        />
</LinearLayout>
